tests/baselines/reference/memberFunctionsWithPublicPrivateOverloads(strict=true).errors.txt
memberFunctionsWithPublicPrivateOverloads.ts(2,13): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(3,12): error TS2385: Overload signatures must all be public, private or protected.
memberFunctionsWithPublicPrivateOverloads.ts(3,12): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(6,13): error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(7,12): error TS2385: Overload signatures must all be public, private or protected.
memberFunctionsWithPublicPrivateOverloads.ts(7,12): error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(8,13): error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(11,20): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(12,19): error TS2385: Overload signatures must all be public, private or protected.
memberFunctionsWithPublicPrivateOverloads.ts(12,19): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(15,15): error TS2385: Overload signatures must all be public, private or protected.
memberFunctionsWithPublicPrivateOverloads.ts(15,15): error TS7010: 'baz', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(16,15): error TS2385: Overload signatures must all be public, private or protected.
memberFunctionsWithPublicPrivateOverloads.ts(16,15): error TS7010: 'baz', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(19,20): error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(20,19): error TS2385: Overload signatures must all be public, private or protected.
memberFunctionsWithPublicPrivateOverloads.ts(20,19): error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(21,20): error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(24,22): error TS7010: 'baz', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(25,19): error TS2385: Overload signatures must all be public, private or protected.
memberFunctionsWithPublicPrivateOverloads.ts(25,19): error TS7010: 'baz', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(26,22): error TS7010: 'baz', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(31,13): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(32,12): error TS2385: Overload signatures must all be public, private or protected.
memberFunctionsWithPublicPrivateOverloads.ts(32,12): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(35,13): error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(36,12): error TS2385: Overload signatures must all be public, private or protected.
memberFunctionsWithPublicPrivateOverloads.ts(36,12): error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(37,13): error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(40,13): error TS7010: 'baz', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(41,15): error TS2385: Overload signatures must all be public, private or protected.
memberFunctionsWithPublicPrivateOverloads.ts(41,15): error TS7010: 'baz', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(44,20): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(45,19): error TS2385: Overload signatures must all be public, private or protected.
memberFunctionsWithPublicPrivateOverloads.ts(45,19): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(48,20): error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(49,19): error TS2385: Overload signatures must all be public, private or protected.
memberFunctionsWithPublicPrivateOverloads.ts(49,19): error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(50,20): error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(53,19): error TS2385: Overload signatures must all be public, private or protected.
memberFunctionsWithPublicPrivateOverloads.ts(53,19): error TS7010: 'baz', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(54,22): error TS7010: 'baz', which lacks return-type annotation, implicitly has an 'any' return type.
memberFunctionsWithPublicPrivateOverloads.ts(59,9): error TS2454: Variable 'c' is used before being assigned.
memberFunctionsWithPublicPrivateOverloads.ts(59,11): error TS2341: Property 'foo' is private and only accessible within class 'C'.
memberFunctionsWithPublicPrivateOverloads.ts(62,10): error TS2454: Variable 'd' is used before being assigned.
memberFunctionsWithPublicPrivateOverloads.ts(62,12): error TS2341: Property 'foo' is private and only accessible within class 'D<T>'.


==== memberFunctionsWithPublicPrivateOverloads.ts (46 errors) ====
    class C {
        private foo(x: number);
                ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
        public foo(x: number, y: string); // error
               ~~~
!!! error TS2385: Overload signatures must all be public, private or protected.
               ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
        private foo(x: any, y?: any) { }
    
        private bar(x: 'hi');
                ~~~
!!! error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
        public bar(x: string); // error
               ~~~
!!! error TS2385: Overload signatures must all be public, private or protected.
               ~~~
!!! error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
        private bar(x: number, y: string);
                ~~~
!!! error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
        private bar(x: any, y?: any) { }
    
        private static foo(x: number);
                       ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
        public static foo(x: number, y: string); // error
                      ~~~
!!! error TS2385: Overload signatures must all be public, private or protected.
                      ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
        private static foo(x: any, y?: any) { }
    
        protected baz(x: string); // error
                  ~~~
!!! error TS2385: Overload signatures must all be public, private or protected.
                  ~~~
!!! error TS7010: 'baz', which lacks return-type annotation, implicitly has an 'any' return type.
        protected baz(x: number, y: string); // error
                  ~~~
!!! error TS2385: Overload signatures must all be public, private or protected.
                  ~~~
!!! error TS7010: 'baz', which lacks return-type annotation, implicitly has an 'any' return type.
        private baz(x: any, y?: any) { }
    
        private static bar(x: 'hi');
                       ~~~
!!! error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
        public static bar(x: string); // error
                      ~~~
!!! error TS2385: Overload signatures must all be public, private or protected.
                      ~~~
!!! error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
        private static bar(x: number, y: string);
                       ~~~
!!! error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
        private static bar(x: any, y?: any) { }
    
        protected static baz(x: 'hi');
                         ~~~
!!! error TS7010: 'baz', which lacks return-type annotation, implicitly has an 'any' return type.
        public static baz(x: string); // error
                      ~~~
!!! error TS2385: Overload signatures must all be public, private or protected.
                      ~~~
!!! error TS7010: 'baz', which lacks return-type annotation, implicitly has an 'any' return type.
        protected static baz(x: number, y: string);
                         ~~~
!!! error TS7010: 'baz', which lacks return-type annotation, implicitly has an 'any' return type.
        protected static baz(x: any, y?: any) { }
    }
    
    class D<T> {
        private foo(x: number); 
                ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
        public foo(x: T, y: T); // error
               ~~~
!!! error TS2385: Overload signatures must all be public, private or protected.
               ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
        private foo(x: any, y?: any) { }
    
        private bar(x: 'hi');
                ~~~
!!! error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
        public bar(x: string); // error
               ~~~
!!! error TS2385: Overload signatures must all be public, private or protected.
               ~~~
!!! error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
        private bar(x: T, y: T);
                ~~~
!!! error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
        private bar(x: any, y?: any) { }
    
        private baz(x: string); 
                ~~~
!!! error TS7010: 'baz', which lacks return-type annotation, implicitly has an 'any' return type.
        protected baz(x: number, y: string); // error
                  ~~~
!!! error TS2385: Overload signatures must all be public, private or protected.
                  ~~~
!!! error TS7010: 'baz', which lacks return-type annotation, implicitly has an 'any' return type.
        private baz(x: any, y?: any) { }
    
        private static foo(x: number);
                       ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
        public static foo(x: number, y: string); // error
                      ~~~
!!! error TS2385: Overload signatures must all be public, private or protected.
                      ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
        private static foo(x: any, y?: any) { }
    
        private static bar(x: 'hi');
                       ~~~
!!! error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
        public static bar(x: string); // error
                      ~~~
!!! error TS2385: Overload signatures must all be public, private or protected.
                      ~~~
!!! error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
        private static bar(x: number, y: string);
                       ~~~
!!! error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
        private static bar(x: any, y?: any) { }
    
        public static baz(x: string); // error
                      ~~~
!!! error TS2385: Overload signatures must all be public, private or protected.
                      ~~~
!!! error TS7010: 'baz', which lacks return-type annotation, implicitly has an 'any' return type.
        protected static baz(x: number, y: string);
                         ~~~
!!! error TS7010: 'baz', which lacks return-type annotation, implicitly has an 'any' return type.
        protected static baz(x: any, y?: any) { }
    }
    
    var c: C;
    var r = c.foo(1); // error
            ~
!!! error TS2454: Variable 'c' is used before being assigned.
              ~~~
!!! error TS2341: Property 'foo' is private and only accessible within class 'C'.
    
    var d: D<number>;
    var r2 = d.foo(2); // error
             ~
!!! error TS2454: Variable 'd' is used before being assigned.
               ~~~
!!! error TS2341: Property 'foo' is private and only accessible within class 'D<T>'.